--- a/index.html
+++ b/index.html
@@ -3,13 +3,37 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
-        <title>Premiers tests du CSS</title>
+        <title>Page 1 - FamilyMercier</title>
     </head>
 
     <body>
         <h1>Mon super site</h1>
+        <h2>qui prend forme</h2>
         
         <p>Bonjour et bienvenue sur mon site !</p>
-        <p>Pour le moment, mon site est un peu <em>vide</em>. Patientez encore un peu !</p>
+        <p>Pour le moment, mon site est un peu <em>vide</em>. 
+            <br /> Patientez encore un <strong> peu !</strong>!> </p>
+
+        <h1>Mon objectif est de : </h1>
+
+        <ol>
+            <li>afficher une photo</li>
+            <li><strike>ouvrir une autre page avec un lien</strike></li>
+            <li>remonter des infos depuis une base de données</li>
+            <li>et après on verra ;o </li>
+
+            <p>Pour accéder à <a href="page2.html">la page 2</a> ! </p>
+
+        </ol>
+
+
+        <!-- pour l'instant l'auteur ne s'affiche pas mais j'ai bon espoir d'y arriver un jour -->
+        <citation auteur="Neil Armstrong" date="21/07/1969">
+        C'est un petit pas pour l'homme, mais un bond de géant pour l'humanité.
+        </citation>
+
+        <h1>Alors pas de panique, ça arrive! </h1>
+
+
     </body>
 </html>
