mise à jour du dimanche soir

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     </head>
 
     <body>
+
         <h1>Mon super site</h1>
         <h2>qui prend forme</h2>
+        <a href="#mon_ancre">Aller vers l'ancre</a>
         
         <p>Bonjour et bienvenue sur mon site !</p>
         <p>Pour le moment, mon site est un peu <em>vide</em>. 
@@ -17,14 +19,19 @@
         <h1>Mon objectif est de : </h1>
 
         <ol>
-            <li>afficher une photo</li>
+            <li><strike>afficher une photo</Strike></li>
             <li><strike>ouvrir une autre page avec un lien</strike></li>
             <li>remonter des infos depuis une base de données</li>
+            <li>faire un lien vers un doc qui se trouve sur un serveur</li>
             <li>et après on verra ;o </li>
 
-            <p>Pour accéder à <a href="page2.html">la page 2</a> ! </p>
+            <p>Pour accéder à <a href="page2.html" title="c'est ici qu'il faut cliquer">la page 2</a> ! </p>
 
         </ol>
+
+        <p>
+            <img src="montagne.png" alt="photo de montagne" title="apparait au survol">
+        </p>
 
 
         <!-- pour l'instant l'auteur ne s'affiche pas mais j'ai bon espoir d'y arriver un jour -->
@@ -32,6 +39,7 @@
         C'est un petit pas pour l'homme, mais un bond de géant pour l'humanité.
         </citation>
 
+        <h2 id="mon_ancre">Titre</h2>
         <h1>Alors pas de panique, ça arrive! </h1>
 
 
