mise à jour du site le 11 novembre

--- a/page2.html
+++ b/page2.html
@@ -7,18 +7,28 @@
     </head>
 
     <body>
-        <h1>Super site</h1>
+        <h1>Mon Super site</h1>
         <h2>page 2</h2>
         
-        <h1>Mon objectif est de : </h1>
+        <h2>A traduire pour demain</h2>
 
-        <ol>
-            <li>afficher une photo</li>
-            <li>ouvrir une autre page avec un lien</li>
-            <li>remonter des infos depuis une base de données</li>
-            <li>et après on verra ;o </li>
-
-        </ol>
+        <p><img src="anni.gif" class="imageflottante" alt="Image flottante" /> 
+        
+            Her name was Alexia; she was sixteen, almost seventeen. Like most teenagers of her own age, she felt a love with a boy. She didn't know how to ask him to go out with, but her best friend knew that, so she made a plan, to put them together at her next party. That worked, at the end of the evening, she was with the boy she liked, and he asked her to go out with.
+But a day, when she was meeting him at lunch at school, he was different. His face, his voice all was queer, he was just different. So, even before he told her, she already knew he was breaking up. Her eyes were starting to get wet, she couldn't even move for a while.
+She was very sad. After school, she directly went home; she didn't speak to anybody, didn't reply to anyone, she just left, like that, and went home.
+Her parents weren't here yet, she went straight in her bedroom, threw her schoolbag on the floor, and felt on cry on the bed.
+The evening, she told her parents she had already eaten and that she was tired. That was not true; she just wanted to be left alone. And, by the way, she couldn't eat and couldn't sleep, the only think she seemed able to do was crying.
+In the middle of the night, she decided she couldn't handle that anymore. She left the house.
+She started walking, to go where, she didn't know.
+She was very sad, that boy, he really was the boy of her life, and, without him, life was pointless, she just have to die, so she won't feel like that anymore.
+So, she went to the ocean, it was end of autumn, it was very cold, she took a small boat, and went where the ocean was deeper.
+She was going to drown, she started to go under water, then, below the boat, no one could see her, no one could save her…
+At the moment she was supposed being dead, asphyxiated, she started to breathe under water… The first through that was one of those queer dreams that can happen at that moment, she was going to die, very soon…
+Then, something even weirder happened, she could not feel her legs, and when she look at its, she saw she could not only see under water, but she had became a mermaid…
+But, mermaids don't exist, she knew it, it was only in stories for young kids. She waited a long time like that, but it still not became all black, the black of the death, she was really a mermaid.
+The fact she was a mermaid did not solve her heart problem, she was as sad as before, and she felt even lonelier than before. She was alone, in the middle of the ocean.
+Alone? Yes, there was not even a single fish, which was pretty queer; usually, sub aquatic life is very lively. Maybe that was like that, being dead, she hoped not.</p>
 
 
 
