--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         
         <p>Bonjour et bienvenue sur mon site !</p>
         <p>Pour le moment, mon site est un peu <em>vide</em>. 
-            <br /> Patientez encore un <strong> peu !</strong>!> </p>
+            <br /> Patientez encore un <strong> peu !</strong></p>
 
-        <h1>Mon objectif est de : </h1>
+        <h2>Mon objectif est de : </h2>
 
         <ol>
-            <li><strike>afficher une photo</Strike></li>
-            <li><strike>ouvrir une autre page avec un lien</strike></li>
+            <li>mettre en forme et le rendre dynamique</li>
+            <li>adapter la page en fonction de l'écran</li>
             <li>remonter des infos depuis une base de données</li>
             <li>faire un lien vers un doc qui se trouve sur un serveur</li>
             <li>et après on verra ;o </li>
@@ -29,9 +29,17 @@
 
         </ol>
 
+        <!-- 
+        <figure> 
+            <img src="zozor.png" alt="zozor" />
+            <figcaption>capture de zozor</figcaption>
+        </figure>
+        -->
+
         <p>
             <img src="montagne.png" alt="photo de montagne" title="apparait au survol">
         </p>
+        
 
 
         <!-- pour l'instant l'auteur ne s'affiche pas mais j'ai bon espoir d'y arriver un jour -->
@@ -39,8 +47,8 @@
         C'est un petit pas pour l'homme, mais un bond de géant pour l'humanité.
         </citation>
 
-        <h2 id="mon_ancre">Titre</h2>
-        <h1>Alors pas de panique, ça arrive! </h1>
+        <h2 id="mon_ancre">L'ancre arrive ici</h2>
+        <h2>Alors pas de panique, ça arrive! </h2>
 
 
     </body>
