--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ L'objectif est purement pédagogique  -->
             <div id="banniere_image">
                 <div id="bannier_description">
                     Les Belledonnes
-                    <a href="#" class="bouton_rouge">wiki 
+                    <a href="https://fr.wikipedia.org/wiki/Chaîne_de_Belledonne" class="bouton_rouge">wiki 
                         <img src="flecheblanchedroite.png" alt=""/></a>
                 </div>
             </div>
@@ -41,8 +41,8 @@ L'objectif est purement pédagogique  -->
                     <h1><img src="logoV.png" alt="logo V" width="50" height="50" class="ico_categorie" />Je suis un grand voyageur</h1>
 
                     <p>Blabla de la section 2 . blablabla   bla mmmmmmmmm bbbbbbb rerthrghfh lkelaeer iueurhgkeairura regherg erfoirij djiuzf gueorgkaer gerjgeajgj regajghkerh gjh gjjhgerugh rgjo gaergjaap egjgouhgaojlrjgpi rrghougo fjrhgohghf ncbvjgvayf&tgaehgoivà(i jejgogoaeg riggoginrgooerj kgegjotaprhhrj ldgjreuyou ljglezeu' dkhfurgg ghayryt&"jg erjggh</p>
-                    <p>Blabla de la section 2 . blablabla   bla mmmmmmmmm bbbbbbb rerthrghfh lkelaeer iueurhgkeairura regherg erfoirij djiuzf gueorgkaer gerjgeajgj regajghkerh gjh gjjhgerugh rgjo gaergjaap egjgouhgaojlrjgpi rrghougo fjrhgohghf ncbvjgvayf&tgaehgoivà(i jejgogoaeg riggoginrgooerj kgegjotaprhhrj ldgjreuyou ljglezeu' dkhfurgg ghayryt&"jg erjggh</p>
-                    <p>Blabla de la section 2 . blablabla   bla mmmmmmmmm bbbbbbb rerthrghfh lkelaeer iueurhgkeairura regherg erfoirij djiuzf gueorgkaer gerjgeajgj regajghkerh gjh gjjhgerugh rgjo gaergjaap egjgouhgaojlrjgpi rrghougo fjrhgohghf ncbvjgvayf&tgaehgoivà(i jejgogoaeg riggoginrgooerj kgegjotaprhhrj ldgjreuyou ljglezeu' dkhfurgg ghayryt&"jg erjggh
+                    <p>sdfjhdfkv  djv nzefjoc  df nf iusdf iuef s  soyf vgsugdg dkuy dvv sd dfyv  ivdosfyo  fpdhs vdyf zouy zuvyoufyv sydgf idf vusygfudyy iuyvuc  sdfyfy iuvy iyf isydgc udgf izyfiezygc d siyfu sdcg seuf zuyeg czudys  eygusgv qvc oaergyoyv  ouq yoYE OYUVD uydsguzgvae vyfvkGSKDVQEGVYY SgdkzUQYEFAK"YEKDS</p>
+                    <p>blablabla   bla mmmmmmmmm bbbbbbb rerthrghfh lkelaeer iueurhgkeairura regherg erfoirij djiuzf gueorgkaer gerjgeajgj regajghkerh gjh gjjhgerugh rgjo gaergjaap egjgouhgaojlrjgpi rrghougo fjrhgohghf ncbvjgvayf&tgaehgoivà(i jejgogoaeg riggoginrgooerj kgegjotaprhhrj ldgjreuyou ljglezeu' dkhfurgg ghayryt&"jg erjggh
                     </p>
                     
 
