--- a/page1.html
+++ b/page1.html
@@ -7,8 +7,8 @@
     </head>
 
     <body>
-        <h1>Mon Super site - page 2</h1>
-        <h3>-----> <a href="index.html" title="oui oui c'est bien ici pour revenir à la page 1 ">retour page 1</a> <-----</h3>
+        <h1>Mon Super site - page 1</h1>
+        <h3>-----> <a href="index.html" title="oui oui c'est bien ici pour revenir à la page 1 ">retour au sommaire</a> <-----</h3>
         
         <h2>A traduire pour demain</h2>
 
