--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ L'objectif est purement pédagogique  -->
                 <div id="titrePrincipal">
                     <div id="logo">
                         <img src="logoF.png" alt="logo F" width="50" height="50">
-                        <a href="MercierFamily.com">MercierFamily.com</a>
+                        <a href="FamilyMercier.com">familymercier.com</a>
                     </div>
                 </div>
                 <nav>
